filter out of screen fix

--- a/assets/css/conference-schedule.css
+++ b/assets/css/conference-schedule.css
@@ -552,4 +552,11 @@
   color: white !important;
   background-color: #6c757d !important;
   border-color: #6c757d !important;
+}
+
+@media (max-width: 768px) {
+  #dayFilter {
+    flex-wrap: wrap !important;
+    display: flex !important;
+  }
 } 
